--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
     <table cellspacing ="20">
       <tr>
         <td><img 
-          src="img/web profie img-cropped.png" 
+          src="img/Datta IMG .png" 
           alt="Pofile img"
         /></td>
         <td><h1>Datta Raut</h1>
@@ -76,3 +76,4 @@
     
   </body>
 </html>
+
