Fix HTML formatting and correct typos

--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
   <body>
     <table cellspacing ="20">
       <tr>
-        <td><img 
+        <td><img style="border-radis= 50%"
           src="img/Datta IMG .png" 
           alt="Pofile img"
         /></td>
@@ -76,4 +76,5 @@
     
   </body>
 </html>
+
 
