--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
   <body>
     <table cellspacing ="20">
       <tr>
-        <td><img style="border-radis= 50%"
+        <td><img style="border-radius: 50%;"
           src="img/Datta IMG .png" 
           alt="Pofile img"
         /></td>
@@ -76,5 +76,6 @@
     
   </body>
 </html>
+
 
 
