--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
   <body>
     <table cellspacing ="20">
       <tr>
-        <td><img style="border-radius: 50%;"
+        <td><img
           src="img/Datta IMG .png" 
           alt="Pofile img"
         /></td>
@@ -76,6 +76,7 @@
     
   </body>
 </html>
+
 
 
 
